--- a/package.json
+++ b/package.json
@@ -1,43 +1,44 @@
 {
-  "name": "is-builtin-module",
-  "version": "1.0.0",
-  "description": "Check if a string matches the name of a Node.js builtin module",
-  "license": "MIT",
-  "repository": "sindresorhus/is-builtin-module",
-  "author": {
-    "name": "Sindre Sorhus",
-    "email": "sindresorhus@gmail.com",
-    "url": "sindresorhus.com"
-  },
-  "engines": {
-    "node": ">=0.10.0"
-  },
-  "scripts": {
-    "test": "ava"
-  },
-  "files": [
-    "index.js"
-  ],
-  "keywords": [
-    "builtin",
-    "built-in",
-    "builtins",
-    "node",
-    "modules",
-    "core",
-    "bundled",
-    "list",
-    "array",
-    "names",
-    "is",
-    "detect",
-    "check",
-    "match"
-  ],
-  "dependencies": {
-    "builtin-modules": "^1.0.0"
-  },
-  "devDependencies": {
-    "ava": "*"
-  }
+	"name": "is-builtin-module",
+	"version": "1.0.0",
+	"description": "Check if a string matches the name of a Node.js builtin module",
+	"license": "MIT",
+	"repository": "sindresorhus/is-builtin-module",
+	"author": {
+		"name": "Sindre Sorhus",
+		"email": "sindresorhus@gmail.com",
+		"url": "sindresorhus.com"
+	},
+	"engines": {
+		"node": ">=4"
+	},
+	"scripts": {
+		"test": "xo && ava"
+	},
+	"files": [
+		"index.js"
+	],
+	"keywords": [
+		"builtin",
+		"built-in",
+		"builtins",
+		"node",
+		"modules",
+		"core",
+		"bundled",
+		"list",
+		"array",
+		"names",
+		"is",
+		"detect",
+		"check",
+		"match"
+	],
+	"dependencies": {
+		"builtin-modules": "^2.0.0"
+	},
+	"devDependencies": {
+		"ava": "*",
+		"xo": "*"
+	}
 }
