--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
 		"builtin-modules": "^3.0.0"
 	},
 	"devDependencies": {
-		"ava": "*",
-		"xo": "*"
+		"ava": "^0.25.0",
+		"xo": "^0.23.0"
 	}
 }
