Added TypeScript definition

--- a/package.json
+++ b/package.json
@@ -7,16 +7,17 @@
 	"author": {
 		"name": "Sindre Sorhus",
 		"email": "sindresorhus@gmail.com",
-		"url": "sindresorhus.com"
+		"url": "https://sindresorhus.com"
 	},
 	"engines": {
 		"node": ">=6"
 	},
 	"scripts": {
-		"test": "xo && ava"
+		"test": "xo && ava && tsd"
 	},
 	"files": [
-		"index.js"
+		"index.js",
+		"index.d.ts"
 	],
 	"keywords": [
 		"builtin",
@@ -39,6 +40,7 @@
 	},
 	"devDependencies": {
 		"ava": "^0.25.0",
+		"tsd": "^0.7.2",
 		"xo": "^0.23.0"
 	}
 }
